Replace cube logo with custom E logo using Over There font - Updated header, contact, and footer sections with proper alignment

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header class="header">
   <div class="container header__container">
     <div class="header__logo">
-      <img class="header__img" src="https://image.ibb.co/kcVou6/path3000.png" alt="Tech Logo"> 
+      <span class="eevoke-logo">E</span> 
       <h1 class="header__title">Tech<span class="header__light">.eevoke</span></h1>
     </div> 
     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -345,9 +345,9 @@
       <div class="col-md-4">
         <div class="contacts">
           <a href="#" class="contacts__link">
-            <img src="https://image.ibb.co/kcVou6/path3000.png" alt="Tech Logo">
-            <h1 class="contacts_title-ag">Tech<span class="contacts--light">.eevoke</span></h1>
-          </a>
+    <span class="eevoke-logo">E</span>
+    <h1 class="contacts_title-ag">Tech<span class="contacts--light">.eevoke</span></h1>
+</a>
           <p class="contacts__address">
             AI Technology Research & Development<br>
             Machine Learning Insights<br>
@@ -416,8 +416,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-2 col-xs-6">
-        <h1 class="footer__title">Tech<span class="footer__light">.eevoke</span></h1>
-      </div>
+    <span class="eevoke-logo">E</span>
+    <h1 class="footer__title">Tech<span class="footer__light">.eevoke</span></h1>
+</div>
       <div class="col-md-10 col-xs-6">
         <div class="footer__social">
           <a href="#" class="footer__social-l">
