Update contact email to admin@eevoke.net

--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
             Artificial Intelligence Solutions
           </p>
           <p class="contacts__info">
-            Email: <a href="mailto:contact@technology.eevoke.net" class="contacts__info-link">contact@technology.eevoke.net</a>
-          </p>
+    Email: <a href="mailto:admin@eevoke.net" class="contacts__info-link">admin@eevoke.net</a>
+</p>
           <p class="contacts__info">
             Focus: <span class="contacts--light">AI Tools, Machine Learning, Technology Trends</span>
           </p>
